Fixing site layout on smaller screens (#571)
* Update _sidebar.scss

Changing @media rule from 768px to 767px (the layout breaks when page width is exactly 768px).

* Fix footer layout on smaller screens

* Fixing width of .licences in site footer

* Fixing white-space of <code>

--- a/_sass/_customstyles.scss
+++ b/_sass/_customstyles.scss
@@ -784,6 +784,10 @@ span.label.label-primary {
 }
 .col-lg-12 .nav li a {background-color: white}
 
+code {
+    white-space: pre-wrap;   
+}
+
 a code {
     color: $brand-color;
 }
